@@ -135,6 +135,7 @@ version <next>
 - floating point PCM encoder/decoder
 - MXF muxer
 - E-AC-3 support added to AC-3 decoder
+- Nellymoser ASAO encoder
 
 version 0.4.9-pre1:
 
